bugfix post-combat animation frame